adding some exceptions for incompatible jfilter arguments

--- a/modules/SConscript
+++ b/modules/SConscript
@@ -18,6 +18,7 @@ programs = {'jdelay' : ['jdelay.cc'],
             'jrecord' : ['jrecord.cc'],
             'jevent_click' : ['jevent_click.cc'],
             'jmonitor' : ['monitor_client.c'],
+            'jfilter' : ['jfilter.cc']
             }
 
 out = []
