--- a/modules/SConscript
+++ b/modules/SConscript
@@ -21,7 +21,7 @@ programs = {'jdelay' : ['jdelay.cc'],
 	     'jfilter' : ['jfilter.cc'],
 	    'jtest' : ['jtest.cc'],
 	    'print_input_signal' : ['print_input_signal.cc'],
-	    'jrandom_X_minus_1':['jrandom_X_minus_1.cc’],
+	    'jrandom_X_minus_1':['jrandom_X_minus_1.cc'],
             }
 
 out = []
